Guarding multiple file inclusions.

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-[Ll]og/
+# [Ll]og/
 [Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
@@ -85,7 +85,7 @@ StyleCopReport.xml
 *.tmp
 *.tmp_proj
 *_wpftmp.csproj
-# *.log
+*.log
 *.vspscc
 *.vssscc
 .builds
