Added project files and tests

--- a/casbin/casbin.vcxproj
+++ b/casbin/casbin.vcxproj
@@ -151,19 +151,37 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="conf_adapter.h" />
+    <ClInclude Include="csv_adapter.h" />
     <ClInclude Include="enforcer.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="logger.h" />
+    <ClInclude Include="Matcher.h" />
+    <ClInclude Include="model.h" />
+    <ClInclude Include="Operator.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="policy_manager.h" />
+    <ClInclude Include="role_manager.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="conf_adapter.cpp" />
+    <ClCompile Include="csv_adapter.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="enforcer.cpp" />
+    <ClCompile Include="logger.cpp" />
+    <ClCompile Include="Matcher.cpp" />
+    <ClCompile Include="model.cpp" />
+    <ClCompile Include="Operator.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="policy_manager.cpp" />
+    <ClCompile Include="role_manager.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
