--- a/casbin/casbin.vcxproj.filters
+++ b/casbin/casbin.vcxproj.filters
@@ -13,6 +13,57 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\config">
+      <UniqueIdentifier>{1d9ab280-cc33-4142-8f9f-ad7d11f7c383}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Cparse">
+      <UniqueIdentifier>{08af8508-10d6-4586-9781-38a63c38cacb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\effect">
+      <UniqueIdentifier>{b73c0dbf-b615-4172-aa1e-3b854766c0c4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\errors">
+      <UniqueIdentifier>{222f157e-1ca2-4954-bd35-0405ef0d914e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\log">
+      <UniqueIdentifier>{00fe693c-8403-4504-b257-4dc54572db15}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\model">
+      <UniqueIdentifier>{dbb3faf4-f54b-43e6-9f4e-08dc98b5d532}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\persist">
+      <UniqueIdentifier>{326f0521-e00c-42a1-be6b-d7c7ffe4a159}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\rbac">
+      <UniqueIdentifier>{28072dab-e49f-4ac4-8b7d-9a2fd05f979d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\util">
+      <UniqueIdentifier>{32347781-7630-41ec-bc9e-ce27e103bc19}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\config">
+      <UniqueIdentifier>{5c16547e-ba26-4e62-9a35-4131ebb94343}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Cparse">
+      <UniqueIdentifier>{8274688c-d74d-4c1a-9766-a9caebd85148}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\errors">
+      <UniqueIdentifier>{bac888fa-ad4c-4e67-819b-0e431bdf7710}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\log">
+      <UniqueIdentifier>{5e8875fd-681c-4cba-a0ac-9a4eba00555f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\model">
+      <UniqueIdentifier>{4b5c5caf-4061-491e-8b1e-1a328b5bb68f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\persist">
+      <UniqueIdentifier>{4951cf3a-668a-494b-88eb-a80ff48fba25}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\rbac">
+      <UniqueIdentifier>{55180b31-543a-4f39-8ac9-f76a8c2fec67}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\util">
+      <UniqueIdentifier>{c3d09bbc-e959-44fa-8b97-4ee062bf45a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -23,6 +74,69 @@
     </ClInclude>
     <ClInclude Include="enforcer.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="config\config.h">
+      <Filter>Header Files\config</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\catch.hpp">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\containers.h">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\functions.h">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\packToken.h">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\shunting-yard.h">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="Cparse\shunting-yard-exceptions.h">
+      <Filter>Header Files\Cparse</Filter>
+    </ClInclude>
+    <ClInclude Include="effect\effect.h">
+      <Filter>Header Files\effect</Filter>
+    </ClInclude>
+    <ClInclude Include="errors\exceptions.h">
+      <Filter>Header Files\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="log\default_logger.h">
+      <Filter>Header Files\log</Filter>
+    </ClInclude>
+    <ClInclude Include="log\log_util.h">
+      <Filter>Header Files\log</Filter>
+    </ClInclude>
+    <ClInclude Include="log\logger.h">
+      <Filter>Header Files\log</Filter>
+    </ClInclude>
+    <ClInclude Include="model\assertion.h">
+      <Filter>Header Files\model</Filter>
+    </ClInclude>
+    <ClInclude Include="model\model.h">
+      <Filter>Header Files\model</Filter>
+    </ClInclude>
+    <ClInclude Include="util\builtin_operators.h">
+      <Filter>Header Files\util</Filter>
+    </ClInclude>
+    <ClInclude Include="util\util.h">
+      <Filter>Header Files\util</Filter>
+    </ClInclude>
+    <ClInclude Include="persist\adapter.h">
+      <Filter>Header Files\persist</Filter>
+    </ClInclude>
+    <ClInclude Include="persist\adapter_filtered.h">
+      <Filter>Header Files\persist</Filter>
+    </ClInclude>
+    <ClInclude Include="rbac\default-role-manager\default_role_manager.h">
+      <Filter>Header Files\rbac</Filter>
+    </ClInclude>
+    <ClInclude Include="rbac\role_manager.h">
+      <Filter>Header Files\rbac</Filter>
+    </ClInclude>
+    <ClInclude Include="persist\file-adapter\file-adapter.h">
+      <Filter>Header Files\persist</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -35,5 +149,76 @@
     <ClCompile Include="enforcer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cparse\builtin-features.cpp">
+      <Filter>Source Files\Cparse</Filter>
+    </ClCompile>
+    <ClCompile Include="Cparse\containers.cpp">
+      <Filter>Source Files\Cparse</Filter>
+    </ClCompile>
+    <ClCompile Include="Cparse\functions.cpp">
+      <Filter>Source Files\Cparse</Filter>
+    </ClCompile>
+    <ClCompile Include="Cparse\packToken.cpp">
+      <Filter>Source Files\Cparse</Filter>
+    </ClCompile>
+    <ClCompile Include="Cparse\shunting-yard.cpp">
+      <Filter>Source Files\Cparse</Filter>
+    </ClCompile>
+    <ClCompile Include="util\builtin_operators.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="util\util.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="persist\adapter.cpp">
+      <Filter>Source Files\persist</Filter>
+    </ClCompile>
+    <ClCompile Include="persist\adapter_filtered.cpp">
+      <Filter>Source Files\persist</Filter>
+    </ClCompile>
+    <ClCompile Include="model\assertion.cpp">
+      <Filter>Source Files\model</Filter>
+    </ClCompile>
+    <ClCompile Include="model\model.cpp">
+      <Filter>Source Files\model</Filter>
+    </ClCompile>
+    <ClCompile Include="log\default_logger.cpp">
+      <Filter>Source Files\log</Filter>
+    </ClCompile>
+    <ClCompile Include="log\log_util.cpp">
+      <Filter>Source Files\log</Filter>
+    </ClCompile>
+    <ClCompile Include="errors\exceptions.cpp">
+      <Filter>Source Files\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="config\config.cpp">
+      <Filter>Source Files\config</Filter>
+    </ClCompile>
+    <ClCompile Include="rbac\default-role-manager\default_role_manager.cpp">
+      <Filter>Source Files\rbac</Filter>
+    </ClCompile>
+    <ClCompile Include="persist\file-adapter\file-adapter.cpp">
+      <Filter>Source Files\persist</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Cparse\builtin-features\functions.inc">
+      <Filter>Header Files\Cparse</Filter>
+    </None>
+    <None Include="Cparse\builtin-features\operations.inc">
+      <Filter>Header Files\Cparse</Filter>
+    </None>
+    <None Include="Cparse\builtin-features\reservedWords.inc">
+      <Filter>Header Files\Cparse</Filter>
+    </None>
+    <None Include="Cparse\builtin-features\typeSpecificFunctions.inc">
+      <Filter>Header Files\Cparse</Filter>
+    </None>
+    <None Include="Cparse\builtin-features.inc">
+      <Filter>Header Files\Cparse</Filter>
+    </None>
   </ItemGroup>
 </Project>
